--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,20 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
+
+
+
+
+# 플러그인 
+# plugins:
+#   - jekyll-notion
+#
+# notion:
+#   fetch_on_watch: true
+#   databases:
+#     - id: 991f93ae0aad4c2da883e1af7fd67e04
+#       collection: posts
+#
 google_site_verification:               # fill in to your verification string
 
 # ↑ --------------------------
