--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "assets/lib"]
 	path = assets/lib
 	url = https://github.com/cotes2020/chirpy-static-assets.git
+[submodule "_posts/blog-posts"]
+	path = _posts/blog-posts
+	url = https://github.com/donkeyadonkey/blog-posts.git
