--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,6 +38,10 @@ jobs:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: submodules-init
+        # You may pin to the exact commit or the version.
+        # uses: snickerbockers/submodules-init@74927a8bb0fe1bb0f1f1e4d102384a8e69f19171
+        uses: snickerbockers/submodules-init@v4
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
